# annotation_tool

./: .gitignore  README.md  main.py  pyproject.toml
app/: database.py  models.py
app/routers/: annotations.py  export.py  images.py  projects.py  users.py
app/templates/: base.html
app/templates/annotations/: label.html
app/templates/export/: select.html
app/templates/images/: table.html
app/templates/projects/: create.html  list.html
app/templates/users/: login.html  register.html  settings.html
data/: annotation_tool.db
data/exports/: Dry_Run_1.json  project_1_export.json
static/css/: style.css
