[project]
name = "annotation-tool"
version = "0.1.0"
description = "Browser-based image annotation tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.21",
    "greenlet>=3.0",
    "gunicorn>=26.0.0",
    "itsdangerous>=2.2",
]
